# ocodx

./: .dockerignore  .env.example  .gitignore  CurrentState.md  Dockerfile  Implementing Sovereign Liquid Matrix.md  README.md  docker-compose.yml  manage.bat  manage.sh  pyproject.toml  rebuildThis.json  release.sh  release_notes.md  shield.sh
.github/: showcase.webm
.github/workflows/: docker-publish.yml
joomcpla-main/: main.py  pyproject.toml
joomcpla-main/joomcpla-main/: README.md
src/open_codex/: agent_builder.py  api.py  main.py  mcp_autopilot.py  mcp_bridge.py  mcp_servers.py  mcp_servers_cryptkeeper.py  mcp_servers_gym.py  mcp_servers_repo.py  mcp_servers_yoo.py  tui.py
src/open_codex/agents/: browser_agent.py  coding_agent.py  gemini_agent.py  gym_agent.py  lmstudio_agent.py  ollama_agent.py  openai_compat_agent.py  phi_4_mini_agent.py  team_agent.py  terminal_agents.py
src/open_codex/frontend/: index.html  package-lock.json  vite.config.ts
src/open_codex/frontend/src/: App.css  App.tsx  YooBuilderPanel.tsx  index.css
src/open_codex/resources/: prompt.txt
src/open_codex/static/: index.html
src/open_codex/static/assets/: index-B6HQMcHK.css  index-CDs-uQIf.js
src/open_codex/tools/: file_tools.py  git_tools.py
tests/: conftest.py  test_agent_builder.py  test_coding_agent.py  test_file_tools.py  test_git_tools.py  test_lmstudio_agent.py  test_ollama_agent.py
