[project]
name = "joomlamcp"
version = "0.1.0"
description = "MCP Server to create articles on a Joomla website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "bleach>=6.2.0",
    "httpx>=0.28.1",
    "markdown>=3.8",
    "mcp[cli]>=1.9.1",
    "google-generativeai>=0.8.3",
    "huggingface_hub>=0.26.2",
    "transformers>=4.46.3",
    "torch>=2.5.1",
    "tokenizers>=0.20.3",
]
